--- a/tools/index.html
+++ b/tools/index.html
@@ -55,11 +55,51 @@
       <hr/>
       <div class="row">
 
-<h1>All Projects</h1>
 
-<br></br>
-	<table class="table"><thead></thead><tbody><tr><td><a href=".." data-key="splash">FubuDocs</a></td><td class="project-description">Frictionless documentation tooling</td></tr></tbody></table>
+<div class="span12">
+  <h1>Tools</h1>
 
+<ul class="thumbnails">
+  <li class="span3">
+    <div class="thumbnail tool">
+      <div class="caption">
+        <h4 class="margin">Text Editor</h4>
+        <form method="post" action="/tools">
+        <div class="control-group">
+          <label for="Editor" class="control-label">Editor</label>
+          <div class="controls">
+            <input type="text" value="C:\Program Files (x86)\Notepad++\notepad++.exe" name="Editor" />
+          </div>
+        </div>
+        <div class="control-group no-margin">
+          <div class="controls">
+            <button type="submit" class="btn">Change</button>
+          </div>
+        </div>
+        </form>
+      </div>
+    </div>
+  </li>
+  <li class="span1"></li>
+  <li class="span3">
+    <div class="thumbnail tool">
+      <div class="caption">
+        <h4 class="margin">Projects</h4>
+        <ul><li><a href="../project/FubuDocs">FubuDocs</a></li></ul>
+      </div>
+    </div>
+  </li>
+<li class="span1"></li>
+  <li class="span3">
+    <div class="thumbnail tool">
+      <div class="caption">
+        <h4 class="margin">Helpers</h4>
+        <button type="button" class="btn">TODO List</button>
+      </div>
+    </div>
+  </li>
+</ul>
+</div>
       </div>
 
     </div>
